# ce-fleet

./: Cargo.toml  README.md  ceapp.toml
.github/workflows/: ci.yml
enroll-service/src/: main.rs  nonce.rs  rollup.rs  token.rs
fleet-cli/: Cargo.toml  ceapp.toml
fleet-cli/src/: daemon.rs  lib.rs  main.rs  pair.rs  proto.rs  util.rs  wallet.rs
packaging/windows/: CeFleet.wxs
