[workspace]
resolver = "3"
members = ["enroll-service", "fleet-cli"]

[workspace.package]
edition = "2024"
license = "AGPL-3.0-only"
authors = ["Leif Rydenfalk <ledamecrydenfalk@gmail.com>"]
repository = "https://github.com/ce-net/ce-fleet"

[workspace.dependencies]
ce-rs = { git = "https://github.com/ce-net/ce-rs" }
ce-cap = { git = "https://github.com/ce-net/ce" }
ce-iam-core = { git = "https://github.com/ce-net/ce-iam" }
ce-identity = { git = "https://github.com/ce-net/ce" }
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
axum = "0.7"
sha2 = "0.10"
directories = "5"
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
